feat: (hacky) JavaFX open dialog (WIP)

--- a/src/main/resources/org/lateralgm/messages/messages.properties
+++ b/src/main/resources/org/lateralgm/messages/messages.properties
@@ -214,7 +214,7 @@ FileChooser.PROJECTLOADED=Project Loaded
 FileChooser.PROJECTSAVED=Project Saved
 
 FileChooser.ALL_SUPPORTED=All supported files
-FileChooser.FORMAT_READERS_GM=All Game Maker Files (gm81, gmk, gm6, gmd)
+FileChooser.FORMAT_READERS_GM=All Game Maker Files (gm81, gmk, gm6, gmd, gmx)
 FileChooser.FORMAT_WRITERS_GM=All Game Maker Files (gm81, gmk, gm6)
 FileChooser.FORMAT_READERS_GMX=Game Maker XML Files (gmx)
 FileChooser.FORMAT_WRITERS_GMX=Game Maker XML Files (gmx)
@@ -225,9 +225,9 @@ FileChooser.FORMAT_GM6=Game Maker 6 Files (gm6)
 FileChooser.FORMAT_GMD=Game Maker 5.3 Files (gmd)
 
 FileChooser.UNRECOGNIZED_TITLE=Unrecognized File
-FileChooser.UNRECOGNIZED=<html>Unable to read file "{0}"<br/>\
-						No registered readers recognize it.<br/>\
-						It is either corrupt or incompatible.</html>
+FileChooser.UNRECOGNIZED=Unable to read file "{0}"\n\
+						No registered readers recognize it.\n\
+						It is either corrupt or incompatible.
 
 FileChooser.ERROR_LOAD_TITLE=Error Loading File
 FileChooser.ERROR_LOAD= <html><style>p {margin-top: 5px; margin-bottom: 5px;}</style>\
