refactor: more UI message changes & added UIHelper.showDocumentation

--- a/src/main/resources/org/lateralgm/messages/messages.properties
+++ b/src/main/resources/org/lateralgm/messages/messages.properties
@@ -1,12 +1,14 @@
 ### Package components ###
 
 HelpDialog.MALFORMED_TITLE=Malformed URI
-HelpDialog.MALFORMED_MESSAGE=<html>"{0}"<br/><p>The URI specified in preferences appears to be \
-	malformed.<br/> Verify that you have entered a valid URI and try again.</p></html>
+HelpDialog.MALFORMED_MESSAGE="{0}"\n\
+The URI specified in preferences appears to be malformed.\n\
+Verify that you have entered a valid URI and try again.
 
 HelpDialog.UNAVAILABLE_TITLE=Unavailable URI
-HelpDialog.UNAVAILABLE_MESSAGE=<html>"{0}"<br/><p>The URI specified in preferences appears to be \
-	unavailable.<br/> Verify that you have entered a valid URI or try again later.</p></html>
+HelpDialog.UNAVAILABLE_MESSAGE="{0}"\n\
+The URI specified in preferences appears to be unavailable.\n\
+Verify that you have entered a valid URI or try again later.
 
 ColorSelect.CHOOSE_TITLE=Choose a Color
 
