--- a/src/main/resources/org/lateralgm/messages/messages.properties
+++ b/src/main/resources/org/lateralgm/messages/messages.properties
@@ -217,7 +217,7 @@ FileChooser.PROJECTSAVED=Project Saved
 
 FileChooser.ALL_SUPPORTED=All supported files
 FileChooser.FORMAT_READERS_GM=All Game Maker Files (gm81, gmk, gm6, gmd, gmx)
-FileChooser.FORMAT_WRITERS_GM=All Game Maker Files (gm81, gmk, gm6)
+FileChooser.FORMAT_WRITERS_GM=All Game Maker Files (gm81, gmk, gm6, gmx)
 FileChooser.FORMAT_READERS_GMX=Game Maker XML Files (gmx)
 FileChooser.FORMAT_WRITERS_GMX=Game Maker XML Files (gmx)
 FileChooser.FORMAT_GM81=Game Maker 8.1 Files (gm81)
