feat: add title for open/save dialog chore: set Java version to 1.8 fix: app doesn't start without previous preferences set

--- a/src/main/resources/org/lateralgm/messages/messages.properties
+++ b/src/main/resources/org/lateralgm/messages/messages.properties
@@ -211,6 +211,8 @@ StreamDecoder.SEEK_PASSED=Can''t seek to {0} from {1}, position already passed (
 
 ### Package main ###
 
+FileChooser.PROJECT_LOAD=Load GM Project
+FileChooser.PROJECT_SAVE=Save GM Project
 FileChooser.PROJECTCREATED=Project Created
 FileChooser.PROJECTLOADED=Project Loaded
 FileChooser.PROJECTSAVED=Project Saved
